--- a/Practice_Sol/Samplebacked_api.csproj
+++ b/Practice_Sol/Samplebacked_api.csproj
@@ -17,4 +17,16 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Uploads\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\Users\ramya\source\repos\Practice_Sol\Practice_Sol\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Users\ramya\source\repos\Practice_Sol\Practice_Sol\.editorconfig" />
+  </ItemGroup>
+
 </Project>
