--- a/Practice_Sol/appsettings.json
+++ b/Practice_Sol/appsettings.json
@@ -5,7 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": { "EF_Postgres_DB": "server=localhost;Database=RamyaDb;port=5432;User Id=postgres;Password=ramya;" },
 
+  "Jwt": {
+    "Key": "your_super_secret_key_1234567890",
+    "Issuer": "Samplebacked_api",
+    "Audience": "Samplebacked_api_users",
+    "ExpireHours": 2
+  },
+
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "EF_Postgres_DB": "server=localhost;Database=RamyaDb;port=5432;User Id=postgres;Password=ramya;" }
 }
